# seaweed

./: .gitignore  BUILD_OPTIMIZATION_GUIDE.md  BUILD_SCRIPTS_README.md  CMakeLists.txt  FONT_LOADING_SOLUTION.md  Info.plist  LOCAL_DEVELOPMENT.md  README.md  SETUP_GUIDE.md  STATIC_LINKING_FIX.md  build_debug.bat  build_debug.ps1  build_debug_fast.bat  build_dmg.sh  imgui.ini  installer.wxs  project _best_practice.md  project_structure.md  run.sh  test_date.cpp  test_static_linking.ps1
.github/workflows/: mac-arm64.yml  mac-x86.yml  release-linux.yml  release-mac.yml  release-windows.yml  release.yml  win.yml
command_collections/: acpi.md  adb.md  am.md  appops.md  battery.md  bluetooth_manager.md  bmgr.md  clipboard.md  connectivity.md  content.md  date.md  deviceidle.md  dpm.md  dumpsys.md  exec-out.md  find.md  getevent.md  getprop.md  input.md  keyevent.md  lock_settings.md  logcat.md  magisk.md  monkey.md  netpolicy.md  network_time_update_service.md  network_watchlist.md  notifications.md  pm.md  reboot_readiness.md  safety_center.md  sandbox.md  screencap.md  screenrecord.md  service.md  setprop.md  settings.md  shortcut.md  sqlite3.md  statusbar.md  (+10 more)
docs/: ARCHITECTURE.md  index.html
imgui/: imgui.cpp
imgui/docs/: README.md
imgui/examples/example_apple_metal/example_apple_metal.xcodeproj/: project.pbxproj
imgui/examples/example_apple_metal/iOS/: Info-iOS.plist
imgui/examples/example_apple_metal/macOS/: Info-macOS.plist
src/: adb_terminal.cpp  adb_terminal.h  apps_action_cook_helper.cpp  apps_action_cook_helper.h  apps_cook_helper.cpp  apps_cook_helper.h  apps_list.cpp  apps_list.h  apps_pinned_store.cpp  apps_pinned_store.h  calendar.cpp  calendar.h  call_logs.cpp  call_logs.h  call_logs_helper.cpp  call_logs_helper.h  confirmation_dialog.cpp  confirmation_dialog.h  contacts.cpp  contacts.h  date_expiration.cpp  date_expiration.h  device_manager.cpp  device_manager.h  embedded_fonts.cpp  embedded_fonts.h  emulator_manager.cpp  emulator_manager.h  font_manager.cpp  font_manager.h  force_update.cpp  force_update.h  global_config.cpp  global_config.h  home.cpp  home.h  install_app.cpp  install_app.h  key_value_store.cpp  key_value_store.h  (+37 more)
src/core/capability/: capability.h  capability_registry.cpp  capability_registry.h  capability_service.cpp  capability_service.h  register_capabilities.cpp  register_capabilities.h
src/core/registry/: command_registry.cpp  command_registry.h  panel_registry.cpp  panel_registry.h
src/core/ui/: async_data_panel.cpp  async_data_panel.h
src/panels/: about_panel.cpp  about_panel.h  apps_panel.cpp  apps_panel.h  calendar_panel.cpp  calendar_panel.h  call_logs_panel.cpp  call_logs_panel.h  contacts_panel.cpp  contacts_panel.h  debug_info_panel.cpp  debug_info_panel.h  device_list_panel.cpp  device_list_panel.h  device_properties_panel.cpp  device_properties_panel.h  emulator_panel.cpp  emulator_panel.h  lifecycle_panel.cpp  lifecycle_panel.h  media_panel.cpp  media_panel.h  messages_panel.cpp  messages_panel.h  processes_panel.cpp  processes_panel.h  register_all_panels.cpp  register_all_panels.h  screen_panel.h  settings_panel.cpp  settings_panel.h  theme_panel.cpp  theme_panel.h  wireless_panel.cpp  wireless_panel.h
